# libImage

./: CMakeLists.txt
src/: image.c  image.h
